--- a/api/templates/hello.html
+++ b/api/templates/hello.html
@@ -1,4 +1,6 @@
 
+<img src="https://cdn.dribbble.com/users/26309/screenshots/1921594/congrats_still_2x.gif?resize=200x150&vertical=center" alt="">
+
 <body>
 	<h1>Hello {{ name }}!</h1>
 	<p>Name: {{ name }}</p>
