--- a/api/templates/index.html
+++ b/api/templates/index.html
@@ -4,44 +4,16 @@
     <title>Page Title</title>
 </head>
 <body>
-    my page gy123
+    
 </body>
 </html>
 
+<img src="https://c4.wallpaperflare.com/wallpaper/558/625/87/fox-trees-fantasy-art-dreamland-wallpaper-preview.jpg" alt="">
 
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
-
-
-
-<ul>
-    <li>Item 1</li>
-    <li>Item 2</li>
-</ul>
-
-<ol>
-    <li>Item 1</li>
-    <li>Item 2</li>
-</ol>
-
-
-<img src="https://cdn.dribbble.com/users/1044993/screenshots/7424024/media/e43feb50c893083ae2121b719ba3bf07.png?resize=320x240&vertical=center" alt="A cute jellyfish">
-
-
-<table>
-    <tr>
-        <th>Module 1</th>
-        <th>Module 2</th>
-    </tr>
-    <tr>
-        <td>Merit</td>
-        <td>Pass</td>
-    </tr>
-</table>
-
+<h1>This is Gene's web test.</h1>
 
 <!-- lab begins from here-->
-<p>LAB BEGINS FROM HERE.</p>
+<p>Lab begins from here. Accepting user input:</p>
 <form action="/submit" method="post">
   <label for="namefield">Name:</label>
   <input type="text" id="namefield" name="name">
@@ -49,3 +21,5 @@
   <input type="number" id="agefield" name="age">
   <input type="submit" value="Submit">
 </form>
+
+
