--- a/api/templates/index.html
+++ b/api/templates/index.html
@@ -8,7 +8,7 @@
 </body>
 </html>
 
-<img height=400 width=800 src="https://c4.wallpaperflare.com/wallpaper/558/625/87/fox-trees-fantasy-art-dreamland-wallpaper-preview.jpg" alt="">
+<img width=1200 src="https://c4.wallpaperflare.com/wallpaper/558/625/87/fox-trees-fantasy-art-dreamland-wallpaper-preview.jpg" alt="">
 
 <h1>This is Gene's 3rd web test.</h1>
 
