--- a/api/templates/index.html
+++ b/api/templates/index.html
@@ -10,7 +10,7 @@
 
 <img width=1200 src="https://c4.wallpaperflare.com/wallpaper/558/625/87/fox-trees-fantasy-art-dreamland-wallpaper-preview.jpg" alt="">
 
-<h1>This is Gene's web test.</h1>
+<h1>This is Gene's 2nd web test.</h1>
 
 <!-- lab begins from here-->
 <p>Lab begins from here. Accepting user input:</p>
